fb_flat bug fix. sb-type-fb-falt.css had a bug that "}" was missing in 294 line. sb-type-fb-falt.css　の294行目にて，"}"が抜けておりバグが発生していた。 その他，コーディング規約にのっとっていない箇所を修正。
git-svn-id: https://plugins.svn.wordpress.org/speech-bubble/trunk@1148766 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/sb-type-pink.css
+++ b/css/sb-type-pink.css
@@ -273,8 +273,7 @@
 
 
 
-@media screen and (min-width:721px)
-{
+@media screen and (min-width:721px) {
 	.sb-type-pink > .sb-subtype-d > .sb-content {
 		float: right;
 		position: relative;
@@ -283,8 +282,8 @@
 		margin-right: 100px;
 	}
 }
-@media screen and (max-width:720px)
-{
+
+@media screen and (max-width:720px) {
 	.sb-type-pink > .sb-subtype-d > .sb-content {
 		float: right;
 		position: relative;
