--- a/css/sb-type-rtail.css
+++ b/css/sb-type-rtail.css
@@ -259,8 +259,7 @@
 
 
 
-@media screen and (min-width:721px)
-{
+@media screen and (min-width:721px) {
 	.sb-type-rtail > .sb-subtype-d > .sb-content {
 		float: right;
 		position: relative;
@@ -269,8 +268,8 @@
 		margin-right: 100px;
 	}
 }
-@media screen and (max-width:720px)
-{
+
+@media screen and (max-width:720px) {
 	.sb-type-rtail > .sb-subtype-d > .sb-content {
 		float: right;
 		position: relative;
@@ -278,6 +277,7 @@
 		margin-right: 100px;
 	}
 }
+
 .sb-type-rtail > .sb-subtype-d > .sb-content:before {
 	position: absolute;
 	top: 24px;
